# chip-8

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.c  todo.mk
graphics/: CMakeLists.txt  sdl.c
graphics/include/: sdl.h
interpreter/: CMakeLists.txt  instruction.c  interpreter.c  read.c
interpreter/include/: instruction.h  interpreter.h  read.h
programs/: FX55.ch8  call-return.ch8  font_character.ch8  setadd-reg.ch8
utils/: CMakeLists.txt  stack.c
utils/include/: log.h  stack.h
